fix : image size overlap in mobile screens

--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@ body {
 
 .blog-img {
         /* max-width: 90%; */
-        width: 800px;
+        max-width: 800px;
         display: block;
         margin: auto;
         /* padding-top: 5rem;
